# demotest

./: README.md
C/: CMakeLists.txt  setenv.sh
C/cmakebuild/: cross.cmake  default.cmake  make_miner.sh  mkplug.sh
C/cqueue/: main.c
C/curl/: CMakeLists.txt  httpclient.c
C/epoll_demo/: CMakeLists.txt
C/epoll_demo/client/: a.out  client.c
C/epoll_demo/server/: Makefile.in  server.c
C/fileop/: CMakeLists.txt  remove_dir.c
C/getaddrinfo/: CMakeLists.txt  main.c
C/json-c/: CMakeLists.txt  main.c
C/protobuf/: Makefile  cli  pclient.cpp  pserver.cpp  srv  test.pb.cc  test.pb.h  test.proto
C/protobuf/3.7.1/: test.pb.h
C/sort/: CMakeLists.txt  main.c
C/zombie/: CMakeLists.txt  zombie.c
module/test/: .test.ko.cmd  .test.mod.o.cmd  .test.o.cmd  Makefile  setenv.sh  test.c
module/test/.tmp_versions/: test.mod
